# cricket_agent

./: README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: project_STRUCTURE.prompt.md
notebooks1/: agent3.ipynb  agent_selections_log.json  agents.ipynb  cricket_cache.json  daily_matches.json  main.py
src/: app.py  main.py
src/agents/: eco_agent.py  form_agent.py  overall_agent.py  router.py  scout_tools.py  validator_agent.py
src/config/: cache_manager.py  config.py
src/tests/: config_test.py
src/tmp/: cricket_cache.json
src/utils/: __init__.py  schema.py  tools.py
