[project]
name = "agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[google-genai]>=1.2.7",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.1",
    "langchain-tavily>=0.2.17",
    "python-dotenv>=1.2.1",
    "langchain-groq>=1.1.1",
    "schedule>=1.2.2",
    "plyer>=2.1.0",
    "pytz>=2025.2",
    "pandas>=3.0.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.0",
    "requests>=2.31.0",
]
